--- a/src/client/css/styles.css
+++ b/src/client/css/styles.css
@@ -4,7 +4,17 @@ body {
     padding: 0;
 }
 
+.wrapper {
+    display: flex;
+    justify-content: center;
+}
+
 .map-wrapper {
-    border: 3px solid #000;
+    border: 4px solid #000;
     overflow: hidden;
+}
+
+.leaderboard {
+    border: 4px solid #000;
+    margin-left: 4px;
 }
